# osmosis-rust

examples/cosmwasm/contracts/osmosis-stargate/: Cargo.toml
examples/cosmwasm/contracts/osmosis-stargate/src/: contract.rs
tests/osmosis-std-cosmwasm-test/: Cargo.toml
tests/osmosis-std-cosmwasm-test/.github/workflows/: Basic.yml
tests/osmosis-std-cosmwasm-test/src/: contract.rs  msg.rs
