[package]
authors = ["Supanat Potiwarakorn <supanat.ptk@gmail.com>"]
edition = "2018"
name = "osmosis-stargate"
version = "0.2.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.16.1
"""

[dependencies]
cosmwasm-std = { version = "3.0.0", features = ["stargate"] }
cw-storage-plus = "3.0.0"
cw2 = "3.0.0" 
osmo-bindings = "0.5.1"
osmosis-std = { path = "../../../../packages/osmosis-std" }
prost = "0.14.1"
schemars = { version = "1.0.4", optional = true }
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }

[dev-dependencies]
cosmwasm-schema = "3.0.0"
cw-multi-test = "3.0.0"
